--- a/Rafael/CalculadoraSPFC/build-CalculadoraSPFC-Desktop_Qt_5_6_0_MSVC2013_64bit-Debug/Makefile.Release
+++ b/Rafael/CalculadoraSPFC/build-CalculadoraSPFC-Desktop_Qt_5_6_0_MSVC2013_64bit-Debug/Makefile.Release
@@ -171,6 +171,7 @@ compiler_rcc_make_all: release\qrc_myresources.cpp
 compiler_rcc_clean:
 	-$(DEL_FILE) release\qrc_myresources.cpp
 release\qrc_myresources.cpp: ..\QCalculadoraSPFC\myresources.qrc \
+		..\QCalculadoraSPFC\sp.ico \
 		..\QCalculadoraSPFC\saopaulo.png
 	C:\Qt\5.6\msvc2013_64\bin\rcc.exe -name myresources ..\QCalculadoraSPFC\myresources.qrc -o release\qrc_myresources.cpp
 
@@ -1672,14 +1673,6 @@ release\mainwindow.obj: ..\QCalculadoraSPFC\mainwindow.cpp ../QCalculadoraSPFC/m
 		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qtoolbutton.h \
 		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qtwidgetsversion.h \
 		ui_mainwindow.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QAction \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QApplication \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QButtonGroup \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QHeaderView \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QLineEdit \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QMenuBar \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QPushButton \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QToolBar \
 		../QCalculadoraSPFC/about.h \
 		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QDialog \
 		C:\Qt\5.6\msvc2013_64\include\QtCore\QDebug \
@@ -1791,43 +1784,7 @@ release\about.obj: ..\QCalculadoraSPFC\about.cpp ../QCalculadoraSPFC/about.h \
 		C:\Qt\5.6\msvc2013_64\include\QtCore\qfiledevice.h \
 		C:\Qt\5.6\msvc2013_64\include\QtGui\qvector2d.h \
 		C:\Qt\5.6\msvc2013_64\include\QtGui\qtouchdevice.h \
-		ui_about.h \
-		C:\Qt\5.6\msvc2013_64\include\QtCore\QVariant \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QAction \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qaction.h \
-		C:\Qt\5.6\msvc2013_64\include\QtGui\qicon.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qactiongroup.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QApplication \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qapplication.h \
-		C:\Qt\5.6\msvc2013_64\include\QtCore\qcoreapplication.h \
-		C:\Qt\5.6\msvc2013_64\include\QtCore\qeventloop.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qdesktopwidget.h \
-		C:\Qt\5.6\msvc2013_64\include\QtGui\qguiapplication.h \
-		C:\Qt\5.6\msvc2013_64\include\QtGui\qinputmethod.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QButtonGroup \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qbuttongroup.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QDialogButtonBox \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qdialogbuttonbox.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QHeaderView \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qheaderview.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qabstractitemview.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qabstractscrollarea.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qframe.h \
-		C:\Qt\5.6\msvc2013_64\include\QtCore\qabstractitemmodel.h \
-		C:\Qt\5.6\msvc2013_64\include\QtCore\qitemselectionmodel.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qabstractitemdelegate.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qstyleoption.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qabstractspinbox.h \
-		C:\Qt\5.6\msvc2013_64\include\QtGui\qvalidator.h \
-		C:\Qt\5.6\msvc2013_64\include\QtCore\qregularexpression.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qslider.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qabstractslider.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qstyle.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qtabbar.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qtabwidget.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qrubberband.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QLabel \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qlabel.h
+		ui_about.h
 
 release\qrc_myresources.obj: release\qrc_myresources.cpp 
 
