--- a/Rafael/CalculadoraSPFC/build-CalculadoraSPFC-Desktop_Qt_5_6_0_MSVC2013_64bit-Release/Makefile.Release
+++ b/Rafael/CalculadoraSPFC/build-CalculadoraSPFC-Desktop_Qt_5_6_0_MSVC2013_64bit-Release/Makefile.Release
@@ -171,6 +171,7 @@ compiler_rcc_make_all: release\qrc_myresources.cpp
 compiler_rcc_clean:
 	-$(DEL_FILE) release\qrc_myresources.cpp
 release\qrc_myresources.cpp: ..\QCalculadoraSPFC\myresources.qrc \
+		..\QCalculadoraSPFC\sp.ico \
 		..\QCalculadoraSPFC\saopaulo.png
 	C:\Qt\5.6\msvc2013_64\bin\rcc.exe -name myresources ..\QCalculadoraSPFC\myresources.qrc -o release\qrc_myresources.cpp
 
@@ -1672,14 +1673,6 @@ release\mainwindow.obj: ..\QCalculadoraSPFC\mainwindow.cpp ../QCalculadoraSPFC/m
 		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qtoolbutton.h \
 		C:\Qt\5.6\msvc2013_64\include\QtWidgets\qtwidgetsversion.h \
 		ui_mainwindow.h \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QAction \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QApplication \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QButtonGroup \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QHeaderView \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QLineEdit \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QMenuBar \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QPushButton \
-		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QToolBar \
 		../QCalculadoraSPFC/about.h \
 		C:\Qt\5.6\msvc2013_64\include\QtWidgets\QDialog \
 		C:\Qt\5.6\msvc2013_64\include\QtCore\QDebug \
